ammended html layout issue

--- a/assets/styles/scss/pages/spec-events.scss
+++ b/assets/styles/scss/pages/spec-events.scss
@@ -1,3 +1,7 @@
+.event-wrapper{
+
+}
+
 .special-events {
   margin-top: 3.5rem;
 }
